static/psi4manual/1.3.2/_sources/api/psi4.core.Molecule.rst.txt
Molecule
========

.. currentmodule:: psi4.core

.. autoclass:: Molecule
   :show-inheritance:

   .. rubric:: Methods Summary

   .. autosummary::

      ~Molecule.B787
      ~Molecule.BFS
      ~Molecule.Z
      ~Molecule.activate_all_fragments
      ~Molecule.add_atom
      ~Molecule.atom_at_position
      ~Molecule.basis_on_atom
      ~Molecule.center_of_mass
      ~Molecule.charge
      ~Molecule.clone
      ~Molecule.com_fixed
      ~Molecule.comment
      ~Molecule.connectivity
      ~Molecule.create_psi4_string_from_molecule
      ~Molecule.deactivate_all_fragments
      ~Molecule.distance_matrix
      ~Molecule.extract_subsets
      ~Molecule.fZ
      ~Molecule.fcharge
      ~Molecule.find_highest_point_group
      ~Molecule.find_point_group
      ~Molecule.fix_com
      ~Molecule.fix_orientation
      ~Molecule.flabel
      ~Molecule.fmass
      ~Molecule.form_symmetry_information
      ~Molecule.format_molecule_for_mol
      ~Molecule.from_arrays
      ~Molecule.from_dict
      ~Molecule.from_schema
      ~Molecule.from_string
      ~Molecule.fsymbol
      ~Molecule.ftrue_atomic_number
      ~Molecule.full_geometry
      ~Molecule.full_pg_n
      ~Molecule.fx
      ~Molecule.fy
      ~Molecule.fz
      ~Molecule.geometry
      ~Molecule.get_fragment_charges
      ~Molecule.get_fragment_multiplicities
      ~Molecule.get_fragment_types
      ~Molecule.get_fragments
      ~Molecule.get_full_point_group
      ~Molecule.get_full_point_group_with_n
      ~Molecule.get_variable
      ~Molecule.inertia_tensor
      ~Molecule.input_units_to_au
      ~Molecule.irrep_labels
      ~Molecule.is_variable
      ~Molecule.label
      ~Molecule.mass
      ~Molecule.mass_number
      ~Molecule.molecular_charge
      ~Molecule.move_to_com
      ~Molecule.multiplicity
      ~Molecule.nallatom
      ~Molecule.name
      ~Molecule.natom
      ~Molecule.nfragments
      ~Molecule.nuclear_dipole
      ~Molecule.nuclear_repulsion_energy
      ~Molecule.nuclear_repulsion_energy_deriv1
      ~Molecule.nuclear_repulsion_energy_deriv2
      ~Molecule.orientation_fixed
      ~Molecule.point_group
      ~Molecule.print_bond_angles
      ~Molecule.print_cluster
      ~Molecule.print_distances
      ~Molecule.print_in_input_format
      ~Molecule.print_out
      ~Molecule.print_out_in_angstrom
      ~Molecule.print_out_in_bohr
      ~Molecule.print_out_of_planes
      ~Molecule.print_rotational_constants
      ~Molecule.provenance
      ~Molecule.reinterpret_coordentry
      ~Molecule.reset_point_group
      ~Molecule.rotational_constants
      ~Molecule.rotational_symmetry_number
      ~Molecule.rotor_type
      ~Molecule.run_dftd3
      ~Molecule.run_gcp
      ~Molecule.save_string_xyz
      ~Molecule.save_string_xyz_file
      ~Molecule.save_xyz_file
      ~Molecule.schoenflies_symbol
      ~Molecule.scramble
      ~Molecule.set_active_fragment
      ~Molecule.set_active_fragments
      ~Molecule.set_basis_all_atoms
      ~Molecule.set_basis_by_label
      ~Molecule.set_basis_by_symbol
      ~Molecule.set_comment
      ~Molecule.set_connectivity
      ~Molecule.set_full_geometry
      ~Molecule.set_geometry
      ~Molecule.set_ghost_fragment
      ~Molecule.set_ghost_fragments
      ~Molecule.set_input_units_to_au
      ~Molecule.set_mass
      ~Molecule.set_molecular_charge
      ~Molecule.set_multiplicity
      ~Molecule.set_name
      ~Molecule.set_nuclear_charge
      ~Molecule.set_point_group
      ~Molecule.set_provenance
      ~Molecule.set_units
      ~Molecule.set_variable
      ~Molecule.symbol
      ~Molecule.symmetrize
      ~Molecule.symmetry_from_input
      ~Molecule.to_arrays
      ~Molecule.to_dict
      ~Molecule.to_schema
      ~Molecule.to_string
      ~Molecule.translate
      ~Molecule.true_atomic_number
      ~Molecule.units
      ~Molecule.update_geometry
      ~Molecule.x
      ~Molecule.xyz
      ~Molecule.y
      ~Molecule.z

   .. rubric:: Methods Documentation

   .. automethod:: B787
   .. automethod:: BFS
   .. automethod:: Z
   .. automethod:: activate_all_fragments
   .. automethod:: add_atom
   .. automethod:: atom_at_position
   .. automethod:: basis_on_atom
   .. automethod:: center_of_mass
   .. automethod:: charge
   .. automethod:: clone
   .. automethod:: com_fixed
   .. automethod:: comment
   .. automethod:: connectivity
   .. automethod:: create_psi4_string_from_molecule
   .. automethod:: deactivate_all_fragments
   .. automethod:: distance_matrix
   .. automethod:: extract_subsets
   .. automethod:: fZ
   .. automethod:: fcharge
   .. automethod:: find_highest_point_group
   .. automethod:: find_point_group
   .. automethod:: fix_com
   .. automethod:: fix_orientation
   .. automethod:: flabel
   .. automethod:: fmass
   .. automethod:: form_symmetry_information
   .. automethod:: format_molecule_for_mol
   .. automethod:: from_arrays
   .. automethod:: from_dict
   .. automethod:: from_schema
   .. automethod:: from_string
   .. automethod:: fsymbol
   .. automethod:: ftrue_atomic_number
   .. automethod:: full_geometry
   .. automethod:: full_pg_n
   .. automethod:: fx
   .. automethod:: fy
   .. automethod:: fz
   .. automethod:: geometry
   .. automethod:: get_fragment_charges
   .. automethod:: get_fragment_multiplicities
   .. automethod:: get_fragment_types
   .. automethod:: get_fragments
   .. automethod:: get_full_point_group
   .. automethod:: get_full_point_group_with_n
   .. automethod:: get_variable
   .. automethod:: inertia_tensor
   .. automethod:: input_units_to_au
   .. automethod:: irrep_labels
   .. automethod:: is_variable
   .. automethod:: label
   .. automethod:: mass
   .. automethod:: mass_number
   .. automethod:: molecular_charge
   .. automethod:: move_to_com
   .. automethod:: multiplicity
   .. automethod:: nallatom
   .. automethod:: name
   .. automethod:: natom
   .. automethod:: nfragments
   .. automethod:: nuclear_dipole
   .. automethod:: nuclear_repulsion_energy
   .. automethod:: nuclear_repulsion_energy_deriv1
   .. automethod:: nuclear_repulsion_energy_deriv2
   .. automethod:: orientation_fixed
   .. automethod:: point_group
   .. automethod:: print_bond_angles
   .. automethod:: print_cluster
   .. automethod:: print_distances
   .. automethod:: print_in_input_format
   .. automethod:: print_out
   .. automethod:: print_out_in_angstrom
   .. automethod:: print_out_in_bohr
   .. automethod:: print_out_of_planes
   .. automethod:: print_rotational_constants
   .. automethod:: provenance
   .. automethod:: reinterpret_coordentry
   .. automethod:: reset_point_group
   .. automethod:: rotational_constants
   .. automethod:: rotational_symmetry_number
   .. automethod:: rotor_type
   .. automethod:: run_dftd3
   .. automethod:: run_gcp
   .. automethod:: save_string_xyz
   .. automethod:: save_string_xyz_file
   .. automethod:: save_xyz_file
   .. automethod:: schoenflies_symbol
   .. automethod:: scramble
   .. automethod:: set_active_fragment
   .. automethod:: set_active_fragments
   .. automethod:: set_basis_all_atoms
   .. automethod:: set_basis_by_label
   .. automethod:: set_basis_by_symbol
   .. automethod:: set_comment
   .. automethod:: set_connectivity
   .. automethod:: set_full_geometry
   .. automethod:: set_geometry
   .. automethod:: set_ghost_fragment
   .. automethod:: set_ghost_fragments
   .. automethod:: set_input_units_to_au
   .. automethod:: set_mass
   .. automethod:: set_molecular_charge
   .. automethod:: set_multiplicity
   .. automethod:: set_name
   .. automethod:: set_nuclear_charge
   .. automethod:: set_point_group
   .. automethod:: set_provenance
   .. automethod:: set_units
   .. automethod:: set_variable
   .. automethod:: symbol
   .. automethod:: symmetrize
   .. automethod:: symmetry_from_input
   .. automethod:: to_arrays
   .. automethod:: to_dict
   .. automethod:: to_schema
   .. automethod:: to_string
   .. automethod:: translate
   .. automethod:: true_atomic_number
   .. automethod:: units
   .. automethod:: update_geometry
   .. automethod:: x
   .. automethod:: xyz
   .. automethod:: y
   .. automethod:: z
